clean up and get ready for main html set up

--- a/templates/memes/index.html
+++ b/templates/memes/index.html
@@ -11,16 +11,7 @@
 </section>
 
 <section class="add-planet">
-    <span><a href="/memes/new">Add a planet</a></span>
-</section>
-
-<section class="controls">
-    <a href="/memes/{{meme['id']}}/edit">Edit</a>
-
-
-    <form action="/memes/{{ meme['id'] }}/delete" method="POST">
-        <button>Delete</button>
-    </form>
+    <span><a href="/memes/new">Add a meme</a></span>
 </section>
 
 <span><a href="/users/new">Sign up</a></span>
