fixing edit issue

--- a/templates/memes/edit.html
+++ b/templates/memes/edit.html
@@ -2,12 +2,12 @@
 {% block content %}
 
 <h1>Edit Memes</h1>
-<form action="/planets/{{ planet['id'] }}" method="POST">
+<form action="/memes/{{ meme['id'] }}" method="POST">
     <label for="">Name:</label>
-    <input type="text" name="name" value="{{ planet['name'] }}">
+    <input type="text" name="name" value="{{ meme['name'] }}">
 
     <label for="">Image URL:</label>
-    <input type="text" name="image_url" value="{{ planet['image_url'] }}">
+    <input type="text" name="image_url" value="{{ meme['image_url'] }}">
 
     <button>Edit A Meme</button>
 </form>
