attempting to display comments under each meme on main page, and allow users to upload image to a certain path.

--- a/templates/comments/new.html
+++ b/templates/comments/new.html
@@ -3,6 +3,7 @@
 {% block content %}
 {% if current_user %}
 <h1>Add and view comments</h1>
+<p>Please add you name in your comment&#10084;</p>
 <a href="/">Home</a>
 <section class="memes">
     <section class="meme">
