--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,21 +5,42 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background-color: white;
+    background-color: #f5f5f5;
+}
+
+.centered {
+    text-align: center;
+}
+
+.centered-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 2rem 0;
+    text-align: center;
+}
+
+.centered-container>* {
+    margin: 0.5rem 0;
 }
 
 .memes {
-    display: grid;
+    /* display: grid;
     grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     gap: 1.25rem;
-    margin-top: 1.5rem;
+    margin-top: 1.5rem; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
 }
 
 a,
 button {
     border: 1px solid black;
     padding: 0.25rem 0.5rem;
-    background-color: #0075f2;
+    background-color: #44AF69;
     color: white;
     font-size: 0.8rem;
     text-decoration: none;
@@ -28,33 +49,79 @@ button {
     margin: 0.25rem;
 }
 
-.meme h4 {
-    /* apply these settings to stop text from overflowing when it's really long */
-    /* white-space: nowrap;
+h1 {
+    background-color: #1DA1F2;
+    padding: 0 1rem;
+    border-radius: 10px;
+    max-width: 650px;
+    margin: 5rem auto;
+}
+
+.meme h2 {
+    white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis; */
+    text-overflow: ellipsis;
 }
 
 .meme {
-    background-color: #44AF69;
+    /* background-color: rgb(21, 119, 151);
+    border-radius: 10px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+    background-color: white;
+    border-radius: 10px;
+    padding: 1rem;
+    width: 600px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.meme-content {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
 }
 
 .meme img {
     width: 100%;
-    height: 300px;
-    /* crops the image - so it doesn't look stretched*/
     object-fit: cover;
+    border-radius: 10px;
+}
+
+.profile-pic {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
 }
 
 .meme header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #44AF69;
+    /* background-color: #1DA1F2; */
+    background-color: white;
     padding: 0 1rem;
+    border-radius: 10px;
+    /* width: 100%; */
 }
 
 .controls {
     display: flex;
     gap: 0.5rem;
+}
+
+.comments {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.comments li {
+    background-color: #f5f5f5;
+    padding: 0.5rem;
+    border-radius: 10px;
 }
