allow users to comment on main page and show comment immediately on the same page

--- a/templates/comments/new.html
+++ b/templates/comments/new.html
@@ -34,7 +34,7 @@
         <input type="text" name="first_name" value="{{ current_user['first_name']}}">
 
         <label for="">Comment:</label>
-        <input type="text" name="content">
+        <textarea name="content" id="" cols="50" rows="3"></textarea>
 
         <button>Add a comment</button>
     </form>
