--- a/templates/memes/edit.html
+++ b/templates/memes/edit.html
@@ -3,7 +3,7 @@
 
 <h1>Edit Memes</h1>
 <form action="/memes/{{ meme['id'] }}" method="POST">
-    <label for="">Name:</label>
+    <label for="">Meme title:</label>
     <input type="text" name="name" value="{{ meme['name'] }}">
 
     <label for="">Image URL:</label>
