--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,7 +17,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 2rem 0;
+    /* margin: 2rem 0; */
     text-align: center;
 }
 
@@ -54,7 +54,7 @@ h1 {
     padding: 0 1rem;
     border-radius: 10px;
     max-width: 650px;
-    margin: 5rem auto;
+    margin: 3rem auto;
 }
 
 .meme h2 {
@@ -77,33 +77,32 @@ h1 {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.meme-content {
+/* .meme-content {
     display: flex;
     align-items: center;
     gap: 1rem;
-}
+} */
 
-.meme img {
+/* .meme img {
     width: 100%;
     object-fit: cover;
     border-radius: 10px;
-}
+} */
 
+/* 
 .profile-pic {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-}
+} */
 
 .meme header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* background-color: #1DA1F2; */
     background-color: white;
     padding: 0 1rem;
     border-radius: 10px;
-    /* width: 100%; */
 }
 
 .controls {
@@ -115,13 +114,42 @@ h1 {
     list-style: none;
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: column;
     gap: 0.5rem;
 }
 
-.comments li {
+.comments span {
     background-color: #f5f5f5;
-    padding: 0.5rem;
+    justify-content: space-between;
+    padding: 0.2rem;
+    border-radius: 10px;
+    display: flex;
+    margin: 0.5rem auto;
+    max-width: 580px;
+    gap: 0.2rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+
+.msg {
+    margin-top: 10rem;
+}
+
+
+.centered-container form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+    margin: 0.5rem;
+}
+
+
+img {
+    width: 100%;
+    /* height: 400px; */
+    /* object-fit: cover; */
+    /* height: auto; */
     border-radius: 10px;
 }
