--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #f5f5f5;
+    margin: 0;
 }
 
 .centered {
@@ -17,12 +18,17 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* margin: 2rem 0; */
+    margin: 0;
     text-align: center;
 }
 
 .centered-container>* {
     margin: 0.5rem 0;
+}
+
+.welcome {
+    text-align: center;
+    margin-bottom: 10px;
 }
 
 .memes {
@@ -36,31 +42,63 @@ body {
     gap: 1rem;
 }
 
-a,
-button {
+a {
     border: 1px solid black;
-    padding: 0.25rem 0.5rem;
-    background-color: #44AF69;
+    padding: 0.1rem 0.5rem;
+    background-color: #1DA1F2;
     color: white;
-    font-size: 0.8rem;
+    font-size: 1rem;
     text-decoration: none;
     cursor: pointer;
     border-radius: 10%;
     margin: 0.25rem;
 }
 
-h1 {
-    background-color: #1DA1F2;
-    padding: 0 1rem;
-    border-radius: 10px;
-    max-width: 650px;
-    margin: 3rem auto;
+.nav-list li {
+    text-decoration: none;
 }
 
-.meme h2 {
+
+button {
+    border: 1px solid black;
+    padding: 0.25rem 0.5rem;
+    background-color: #1DA1F2;
+    color: white;
+    font-size: 1rem;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 10%;
+    margin: 0.25rem;
+}
+
+.logo {
+    max-width: 4rem;
+    height: auto;
+    margin: 0.2rem;
+}
+
+nav h1 {
+    background-color: #1DA1F2;
+    font-size: 2rem;
+    padding: 0;
+    /* border-radius: 10px; */
+    /* max-width: 650px; */
+    margin: 0;
+    padding-top: 0.5rem;
+    /* text-align: center; */
+    /* padding-left: 7rem; */
+}
+
+h2 {
+    font-size: 2rem;
+    margin: 0 auto;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+h3 {
+    margin-top: 0.5rem;
 }
 
 .meme {
@@ -77,31 +115,13 @@ h1 {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-/* .meme-content {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-} */
-
-/* .meme img {
-    width: 100%;
-    object-fit: cover;
-    border-radius: 10px;
-} */
-
-/* 
-.profile-pic {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-} */
-
 .meme header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     background-color: white;
     padding: 0 1rem;
+    margin-top: -15px;
     border-radius: 10px;
 }
 
@@ -152,4 +172,180 @@ img {
     /* object-fit: cover; */
     /* height: auto; */
     border-radius: 10px;
+}
+
+nav {
+    background-color: #1DA1F2;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    /* text-align: center; */
+}
+
+.nav-list {
+    /* display: flex;
+    flex-direction: row; */
+    padding-right: 1rem;
+}
+
+nav a {
+    color: #fff;
+    background-color: #1DA1F2;
+    text-decoration: none;
+    /* font-size: 1.5em;
+    padding: 1rem 2rem; */
+}
+
+.confetti {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.confetti:before,
+.confetti:after {
+    content: "";
+    position: absolute;
+    top: -10px;
+    width: 10px;
+    height: 10px;
+    background-color: #fbc531;
+    border-radius: 50%;
+}
+
+.confetti:before {
+    left: 10%;
+    animation: confetti-1 3s infinite;
+}
+
+.confetti:after {
+    left: 30%;
+    animation: confetti-2 3s infinite;
+}
+
+@keyframes confetti-1 {
+    0% {
+        transform: rotateZ(0deg);
+        opacity: 1;
+        top: -10px;
+    }
+
+    100% {
+        transform: rotateZ(180deg);
+        opacity: 0;
+        top: 100vh;
+    }
+}
+
+@keyframes confetti-2 {
+    0% {
+        transform: rotateZ(0deg);
+        opacity: 1;
+        top: -10px;
+    }
+
+    100% {
+        transform: rotateZ(360deg);
+        opacity: 0;
+        top: 100vh;
+    }
+}
+
+
+
+@media (max-width: 600px) {
+    img {
+        max-width: 300px;
+        /* grid-template-columns: repeat(1, 1fr); */
+    }
+
+    nav h1 {
+        background-color: #1DA1F2;
+        font-size: 2rem;
+        /* padding: 0 1rem; */
+        /* border-radius: 10px; */
+        /* max-width: 650px; */
+        margin: 0 auto;
+        padding-top: 4px;
+        text-align: center;
+        padding-left: 3rem;
+    }
+
+    .centered-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+        text-align: center;
+    }
+
+    .centered-container>* {
+        margin: 0.1rem 0;
+    }
+
+    .welcome {
+        text-align: center;
+        /* margin-bottom: 10px; */
+    }
+
+    .memes {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 0.2rem;
+    }
+
+    h3 {
+        margin-top: 0.5rem;
+        font-size: 0.8rem;
+    }
+
+    .meme {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 0.5rem;
+        background-color: white;
+        border-radius: 10px;
+        padding: 1rem;
+        width: 300px;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .meme h2 {
+        font-size: 1rem;
+    }
+
+    .comments span {
+        padding: 0.5rem;
+        width: 250px;
+    }
+
+
+
+    a {
+        border: 1px solid black;
+        padding: 0.1rem 0.5rem;
+        background-color: #1DA1F2;
+        color: white;
+        font-size: 0.8rem;
+        text-decoration: none;
+        cursor: pointer;
+        border-radius: 10%;
+        margin: 0.25rem;
+    }
+
+    button {
+        border: 1px solid black;
+        padding: 0.25rem 0.5rem;
+        background-color: #1DA1F2;
+        color: white;
+        font-size: 0.8rem;
+        text-decoration: none;
+        cursor: pointer;
+        border-radius: 10%;
+        margin: 0.25rem;
+    }
 }
