--- a/templates/memes/new.html
+++ b/templates/memes/new.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1 class="centered">Add Memes</h1>
+<h1 class="centered">Add Image from URL</h1>
 <section class="centered-container">
     <form action="/memes" method="POST">
-        <label for="">Name:</label>
+        <label for="">Image name:</label>
         <input type="text" name="name">
 
         <label for="">Image URL:</label>
@@ -13,4 +13,15 @@
         <button>Add A meme</button>
     </form>
 </section>
+
+<h1 class="centered">Upload an image:</h1>
+<section class="centered-container"></section>
+<form action="/upload" method="POST" enctype="multipart/form-data">
+    <label for="image"></label>
+    <input type="file" name="image" id="image">
+    <input type="submit" value="Upload">
+</form>
+</section>
+
+
 {% endblock %}
