order memes by id and only show 3 comments in index.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <nav>
         <section class="controls">
             <img class="logo" src="/static/images/shrimp_shack.png" alt="Logo">
-            <h1>Shrimps Share</h1>
+            <h1><a class="nav-heading" href="/">Shrimps Share</a></h1>
         </section>
         <ul class="nav-list">
             <li>
