--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,6 +42,8 @@ body {
     gap: 1rem;
 }
 
+
+
 a {
     border: 1px solid black;
     padding: 0.1rem 0.5rem;
@@ -72,13 +74,36 @@ button {
 }
 
 .logo {
-    max-width: 4rem;
+    max-width: 5rem;
     height: auto;
     margin: 0.2rem;
 }
 
-nav h1 {
+nav {
     background-color: #1DA1F2;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    /* text-align: center; */
+}
+
+.nav-list {
+    /* display: flex;
+    flex-direction: row; */
+    padding-right: 1rem;
+}
+
+nav a {
+    color: #fff;
+    background-color: #1DA1F2;
+    text-decoration: none;
+    /* font-size: 1.5em;
+    padding: 1rem 2rem; */
+}
+
+nav h1 a {
+    background-color: #1DA1F2;
+    border: none;
     font-size: 2rem;
     padding: 0;
     /* border-radius: 10px; */
@@ -112,7 +137,7 @@ h3 {
     background-color: white;
     border-radius: 10px;
     padding: 1rem;
-    width: 600px;
+    width: 650px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -173,28 +198,6 @@ img {
     /* object-fit: cover; */
     /* height: auto; */
     border-radius: 10px;
-}
-
-nav {
-    background-color: #1DA1F2;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    /* text-align: center; */
-}
-
-.nav-list {
-    /* display: flex;
-    flex-direction: row; */
-    padding-right: 1rem;
-}
-
-nav a {
-    color: #fff;
-    background-color: #1DA1F2;
-    text-decoration: none;
-    /* font-size: 1.5em;
-    padding: 1rem 2rem; */
 }
 
 .confetti {
