--- a/templates/memes/index.html
+++ b/templates/memes/index.html
@@ -57,8 +57,8 @@
 
         <section class="comments">
             {% for comment in comments %}
-            {% if comment['meme_id'] == meme['id']%}
-            <section class="controls">
+            {% if comment['meme_id'] == meme['id'] %} <section class="controls">
+
                 <p>ID {{comment['user_id']}}: {{comment['content'] }}</p>
                 <form action="/comments/{{comment['id']}}/delete" method="POST">
                     <button>&#10007;</button>
@@ -66,10 +66,10 @@
             </section>
             {% endif %}
             {% endfor %}
-
         </section>
+
         <form action="/comments/{{ meme['id'] }}/new/2" method="POST">
-            <button>Delete comments</button>
+            <button>View all comments</button>
         </form>
 
     </section>
